[project]
name = "dataset-tools"
version = "0.1.3"
description = "polars based cli tool for working with large datasets in parquet format"
authors = [
    {name = "Mateo Restrepo", email = "mateini@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.1",
    "loguru>=0.7.3",
    "setuptools>=80.9.0",
    "pandas",
    "polars",
    "pyarrow>=24.0.0",
    "tabulate>=0.10.0",
]

[dependency-groups]

dev = [
    "pre-commit",
    "ty",
    "poethepoet",
]

[project.scripts]
ds = "dataset_tools.cli:cli"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataset_tools"]

[tool.poe.tasks]
ty = "ty check ."
pc = "pre-commit run --all-files"
